# Sirius_sklad_new

./: .dockerignore  .gitignore  CURSOR_TERMINAL_ISSUE_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_STANDARD.md  Dockerfile  GITHUB_DEPLOYMENT.md  Makefile  PHOTO_UPLOAD_FIXES.md  PHOTO_UPLOAD_TEST.md  QUICK_FIX_CHECKLIST.md  README.md  README_DELIVERY.md  SAFE_DEVELOPMENT_GUIDE.md  SERVER_INSTRUCTIONS.md  SERVER_ISSUES_SOLVED.md  SERVER_STARTUP_GUIDE.md  SIMPLE_DEPLOY_INSTRUCTIONS.md  SIMPLE_INSTRUCTIONS.md  SIRIUS_CHANGES_SUMMARY.md  SIRIUS_CHECKLIST.md  ULTRA_PERFECT_server_setup.sh  UPGRADE_INSTRUCTIONS.md  add_delivery_fields_migration.py  alembic.ini  app_minimal.py  check_server.py  clean_and_update.sh  cleanup_plan.md  debug_auth.py  debug_page_load.txt  debug_server.py  deploy.bat  deploy.sh  deploy_working_code.sh  diagnose_and_fix.py  (+53 more)
.cursor/rules/: conventions.mdc  workflow.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_add_order_fields.py  002_fix_payment_method_values.py  003_add_order_code_payments_analytics.py  004_add_product_code_field.py  005_update_order_code_format.py  006_add_shop_tables.py  007_add_detailed_description.py  008_remove_product_code.py  009_fix_photo_paths.py  010_add_product_enhancements.py  012_add_qr_fields_to_orders.py  013_add_source_field_to_orders.py  25786fc02a9b_add_qr_fields_to_orders.py  83480427e3b3_fix_order_status_constraint.py  921c5fbe1593_fix_payment_method_constraint.py  a140102d6876_add_ordered_not_paid_status_and_.py
app/: __init__.py  config.py  config_test.py  db.py  deps.py  main.py  main_ULTRA_PERFECT.py  main_minimal.py  main_minimal_working.py  main_perfect_full.py  main_ultra_minimal.py  main_working.py  product_constants.py
app/constants/: __init__.py  delivery.py  order_status_enum.py  order_statuses.py
app/middleware/: error_handler.py
app/models/: __init__.py  operation_log.py  order.py  payment.py  product.py  product_batch.py  product_photo.py  shop_cart.py  shop_order.py  supply.py  user.py
doc/: README.md  SUMMARY.md  api_catalog.md  config_deploy.md  conventions.md  data_model.md  flows.md  gaps_and_questions.md  idea.md  ops_guide.md  project_overview.md  runbook_cursor.md  tasklist.md  terminal_stability_tests.md  test_plan.md  ui_inventory.md  vision.md  workflow.md
docs/: API_DOCUMENTATION.md  POSTGRESQL_MIGRATION.md  REDIS_CACHING.md  STABILITY_GUIDE.md  TECH_SPEC.md
migrations/: add_delivery_system.py
ops/: health.ps1  restart.ps1  start.ps1  status.ps1  stop.ps1
scripts/: add_warehouse_user.py  add_warehouse_workers.py  bootstrap_min_admin.py  clear_test_data.py  create_admin.py  create_demo_data.py  create_test_admin.py  dev.bat  dev.ps1  fill_missing_data.py  fill_product_codes.py  health_check.bat  start_server.bat  update_order_codes.py
tests/: conftest.py  test_admin_functionality.py  test_analytics_functionality.py  test_basic_functionality.py  test_orders_functionality.py  test_products_functionality.py  test_routes_smoke.py
(+102 files in other folders)
